Style user signup/signin

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,7 @@
  *= require_tree .
  *= require_self
  */
+
+@import "base/reset.scss";
+@import "font-awesome-sprockets";
+@import "font-awesome";
