--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -1,53 +1,56 @@
-// .header {
-//   max-width: 100%;
-//   background: rgba(247,191,77,0.87);
-// }
-// .navbar-container {
-//   position: relative;
-//   display: flex;
-//   max-width: 1020px;
-//   height: 40px;
-//   padding: 18px;
-//   justify-content: flex-end;
-// }
+.header {
+  max-width: 100%;
+  background: rgba(247,191,77,0.87);
+}
+
+.navbar-container {
+  max-width: 1020px;
+  padding-top: 1em;
+  display: flex;
+  padding-bottom: 1em;
+  justify-content: space-between;
+  margin: auto;
+}
+
+.logo-container {
+  display: flex;
+  align-items: center;
+}
+
+.nav-links {
+  display: flex;
+  align-items: center;
+  width: 420px;
+  height: 40px;
+}
 //
-// .nav-links {
-//   display: flex;
-//   align-items: center;
-//   margin-right: 15px;
-// }
+.nav-item {
+  display: flex;
+  align-items: center;
+  padding:0 9px;
+  letter-spacing: 1px;
+  font-size: 0.75em;
+  font-weight: 500;
+  height: 40px;
+}
+
+.nav-signup-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  color: #F7BF4D;
+  border: 1px solid white;
+  border-radius: 3px;
+  margin-left: 8px;
+  padding: 0 18px;
+  transition: .3s;
+}
 //
-// .nav-item {
-//   // display: flex;
-//   margin: 0 10px 0 10px;
-//   color: white;
-//   letter-spacing: 1px;
-//   font-size: 0.7em;
-//   font-weight: 500;
-// }
-//
-// // .nav-button {
-// //   display: flex;
-// // }
-//
-// .nav-signup-button {
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-//   background-color: white;
-//   color: #F7BF4D;
-//   min-width: 90px;
-//   padding: 5px;
-//   border: 1px solid white;
-//   border-radius: 3px;
-//   height: 30px;
-//   transition: .3s;
-// }
-//
-// .nav-signup-button:hover {
-//   background-color: Transparent;
-//   color: white;
-// }
+.nav-signup-button:hover {
+  background-color: Transparent;
+  color: white;
+}
 // .navbar-container{
 //   display: flex;
 //   justify-content: flex-end;
