--- a/app/assets/stylesheets/components/mainpage.scss
+++ b/app/assets/stylesheets/components/mainpage.scss
@@ -4,7 +4,7 @@
   font-size: 18px;
   font-weight: 600;
   font-family: Helvetica;
-  color: white;
+  color: black;
 }
 
 .pitch-container{
@@ -66,7 +66,7 @@
   width: 1140px;
 }
 .about-part {
-  margin-right: 23.2px;
+  margin-right: 31px;
   width: 33%;
  }
 
@@ -78,6 +78,17 @@
 }
 
 .about-text {
+  color: black;
+  font-weight: 200;
+}
+
+.h2 {
+  color: #EF6236;
+  font-size: 1.25em;
+  font-weight: 600;
+}
+
+.p {
   color: black;
   font-weight: 200;
 }
