Add mainpage images, additional styling

--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -9,7 +9,8 @@
   display: flex;
   padding-bottom: 1em;
   justify-content: space-between;
-  margin: auto;
+  margin: 0 auto;
+  color: white;
 }
 
 .logo-container {
