--- a/app/assets/stylesheets/components/footer.scss
+++ b/app/assets/stylesheets/components/footer.scss
@@ -1,38 +1,41 @@
 .footer {
   background-color: #F7BF4D;
+  height: 38.5vh;
+}
+
+.footer-wrapper {
   display: flex;
-  overflow: auto;
+  justify-content: center;
   padding: 2em 0;
 }
 
-.footer-container-1 {
+.footer-container {
+  display: flex;
   max-width: 1020px;
   margin-left: auto;
   margin-right: auto;
-  padding: 0 1em;
 }
-.footer-container {
-  display: flex;
-  width: 83%;
-  margin-left: 8.53%;
-}
+
 .footer-links {
-  text-align: left;
   display: flex;
   flex-direction: column;
-  margin-right: 2.85%;
-  width: 28%;
-  font-size: 18px;
-  line-height: 1.625;
+  line-height: 26px;
+  padding-right: 8.75em;
   color: white;
-  font-weight: 500;
+  font-family: Helvetica;
+  font-weight: 400;
 }
 
 .footer-about {
-
+  width: 564px;
+  font-weight: 100;
+  font-family: Helvetica;
+  color: white;
+  line-height: 1.625;
+  font-size: 16px;
+  letter-spacing: 0.52px;
 }
 
 .footer-p {
-  font-weight: 100;
-  margin-bottom: 10px;
+  margin-bottom: 0.825em;
 }
