--- a/app/assets/stylesheets/components/mainpage.scss
+++ b/app/assets/stylesheets/components/mainpage.scss
@@ -1,10 +1,9 @@
 .main-content {
-  max-width: 100%;
+  width: 100%;
   margin: 0 auto;
   font-size: 18px;
   font-weight: 600;
   font-family: Helvetica;
-  color: black;
 }
 
 .pitch-container{
@@ -12,6 +11,15 @@
   display: flex;
   justify-content: center;
   padding: 110px;
+  color: white;
+}
+
+.jumbotron {
+  background: image-url('teatime.jpg') no-repeat center center;
+  height: 411px;
+  width: 100%;
+  z-index: -1;
+  position: absolute;
 }
 
 .pitch-box {
@@ -53,10 +61,9 @@
 .about-container {
   display: flex;
   justify-content: center;
-  width: 100%;
   background: #F3ECCE;
   text-align: center;
-  padding: 2.4em 1em;
+  padding: 2.3em 1em;
   margin-bottom: 3em;
 }
 
@@ -88,7 +95,89 @@
   font-weight: 600;
 }
 
+
+.upper-body-container {
+  max-width: 1020px;
+  margin: 0 auto;
+}
+
+.why {
+  display: flex;
+  flex-direction: column;
+}
+
+.why-title {
+  text-align: center;
+  margin-bottom: 1em;
+  font-weight: 600;
+  font-family: Helvetica;
+  font-size: 0.91em;
+}
+
+.why-explain {
+  display: flex;
+  align-items: center;
+  margin: 36px;
+  justify-content: space-around;
+}
+
+.mainpage-image {
+  width: 313px;
+}
+
+.why-explain-right {
+  width: 396.45px;
+  height: 210.625px;
+  margin-top: 30px;
+  padding-right: 6px;
+}
+.why-explain-left {
+  width: 396.45px;
+  height: 210.625px;
+  margin-top: 30px;
+  padding-right: 6px;
+}
+
+.why-explain-header {
+  margin-bottom: 18px;
+}
+
 .p {
   color: black;
-  font-weight: 200;
+  font-weight: 400;
+  line-height: 1.625;
+  font-size: 17px;
+}
+
+.body-signup {
+  background: #F3ECCE;
+}
+
+.body-sign-box {
+  display: flex;
+  justify-content: center;
+  padding: 2em;
+  flex-direction: column;
+  align-items: center;
+}
+
+.signup-h2 {
+  color: #5C5C5C;
+  font-size: 1.70em;
+  margin-bottom: 29px;
+  margin-top: 3px;
+}
+
+.body-signup-button {
+  width: 540px;
+  text-align: center;
+  color: white;
+  background-color: #EF6236;
+  border: 2px solid #EF6236;
+  padding: 1em 0;
+  font-weight: 400;
+  letter-spacing: 2px;
+  font-size: 17px;
+  border-radius: 10px;
+  line-height: normal;
 }
