Add city placeholder images

--- a/app/assets/stylesheets/components/cities_index.scss
+++ b/app/assets/stylesheets/components/cities_index.scss
@@ -22,8 +22,10 @@
   font-family: Helvetica;
 }
 
-.cities-list {
-
+.city-index-image {
+  width: 312.5px;
+  height: 160px;
+  object-fit: contain;
 }
 
 .cities-partial {
