--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -11,7 +11,12 @@ window.images = {
   never: '<%= image_path("never.png") %>',
   people: '<%= image_path("people.png") %>',
   weird: '<%= image_path("weird.png") %>',
-  teatime: '<%= image_path("teatime.jpg") %>'
+  teatime: '<%= image_path("teatime.jpg") %>',
+  lax: '<%= image_path("lax.png") %>',
+  sf: '<%= image_path("sf.jpg") %>',
+  nyc: '<%= image_path("nyc.jpg") %>',
+  dc: '<%= image_path("dc.jpg") %>',
+  chi: '<%= image_path("chi.jpg") %>'
 }
 
 </script>
