create city views partial

--- a/app/assets/stylesheets/components/flash.scss
+++ b/app/assets/stylesheets/components/flash.scss
@@ -1,5 +1,5 @@
 // background: #F7BF4D;
-// padding: .5em 1em;
+// margin: .5em 1em;
 // border: 2px solid #FEFEFE;
 // border-right: none;
 // border-left: none;
