--- a/app/assets/stylesheets/components/signup_form.scss
+++ b/app/assets/stylesheets/components/signup_form.scss
@@ -3,8 +3,26 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background: rgb(250, 246, 232);
+}
+
+.errors-list {
+  background: #EF6236;
+  padding: .5em;
+  border: 2px solid #FEFEFE;
+  margin-bottom: 3em;
+  border-right: none;
+  border-left: none;
+  color: #FEFEFE;
+  width: 100%;
+  text-align: center;
+  width: 100%;
+  font-size: 1em;
+}
+
+.no-errors {
   background: #F3ECCE;
-  padding: 3em;
+  margin-bottom: 3em;
 }
 
 .sign-up-form {
@@ -59,5 +77,5 @@
   display: flex;
   justify-content: center;
   color: #EF6236;
-  padding-bottom: 6px;
+  padding-bottom: 3.5em;
 }
