--- a/app/assets/stylesheets/components/cities_index.scss
+++ b/app/assets/stylesheets/components/cities_index.scss
@@ -25,7 +25,6 @@
 .city-index-image {
   width: 312.5px;
   height: 160px;
-  object-fit: contain;
 }
 
 .cities-partial {
@@ -66,6 +65,7 @@
 .cities-section-p {
   font-weight: 400;
   color: #333;
+  margin-left: 25px;
 }
 
 .cities-section-list-container {
