--- a/app/assets/stylesheets/components/signup_form.scss
+++ b/app/assets/stylesheets/components/signup_form.scss
@@ -8,6 +8,7 @@
 
 .errors-list {
   background: #EF6236;
+  position: relative;
   padding: .5em;
   border: 2px solid #FEFEFE;
   margin-bottom: 3em;
@@ -18,6 +19,7 @@
   text-align: center;
   width: 100%;
   font-size: 1em;
+  z-index: 1
 }
 
 .no-errors {
@@ -26,13 +28,13 @@
 }
 
 .sign-up-form {
-  width: 648px;
+  width: 700px;
 }
 
 .sign-up-header {
   font-size: 1.5em;
   color: #EF6236;
-  font-weight: 400;
+  font-weight: 600;
   margin-bottom: 18px;
   font-family: Helvetica;
 }
@@ -40,7 +42,7 @@
 .sign-up-p {
   line-height: 1.625;
   font-weight: 400;
-  font-size: 17px;
+  font-size: 19px;
   margin-bottom: 17px;
 }
 
@@ -51,13 +53,15 @@
   margin-bottom: 24px;
   line-height: normal;
 }
+
 .input-box {
-  padding: 1em;
+  padding: 1.1em;
   border-radius: 3px;
   border: 1px solid #DDD;
-  font-size: 16px;
+  font-size: 19px;
   margin-bottom: 0.8125em;
 }
+
 .signup-button {
   text-align: center;
   color: white;
@@ -71,9 +75,10 @@
   line-height: normal;
   margin-bottom: 0.825em;
 }
+
 .redirect {
   font-weight: 100;
-  font-size: 17px;
+  font-size: 19px;
   display: flex;
   justify-content: center;
   color: #EF6236;
