Update conditional rendering for citydetail

--- a/app/assets/stylesheets/components/city_detail.scss
+++ b/app/assets/stylesheets/components/city_detail.scss
@@ -141,6 +141,11 @@
   line-height: 1.625;
 }
 
+.host-pic {
+  width: 150px;
+  height: auto;
+}
+
 .change-city-container {
   display: flex;
   align-items: center;
