Add styling to dashboard, profile, and city detail page

--- a/app/assets/stylesheets/components/footer.scss
+++ b/app/assets/stylesheets/components/footer.scss
@@ -1,6 +1,6 @@
 .footer {
   background-color: #F7BF4D;
-  height: 38.5vh;
+  // height: 38.5vh;
 }
 
 .footer-wrapper {
@@ -21,6 +21,7 @@
   font-size: 19px;
   flex-direction: column;
   line-height: 26px;
+  padding-left: 4.375em;
   padding-right: 8.75em;
   color: white;
   font-family: Helvetica;
