Migrate static images to AWS S3

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
-  <%= favicon_link_tag 'icon.png' %>
+  <%= favicon_link_tag 'https://s3.us-east-2.amazonaws.com/readtheleaves1-dev/images/icon.png' %>
 </head>
 <body>
 
