--- a/app/assets/stylesheets/components/profile.scss
+++ b/app/assets/stylesheets/components/profile.scss
@@ -4,3 +4,23 @@
   flex-direction: column;
   align-items: center;
 }
+
+.profile-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.profile {
+    font-weight: 400;
+    line-height: 1.625;
+}
+
+.user-info {
+    text-align: center;
+}
+
+img.profile-pic {
+    border: 1px solid transparent;
+    border-radius: 15px;
+}
