--- a/app/assets/stylesheets/components/dashboard.scss
+++ b/app/assets/stylesheets/components/dashboard.scss
@@ -5,3 +5,15 @@
   align-items: center;
   background-color: #FAF6E8;
 }
+
+.dashboard-container {
+  font-weight: 400;
+  line-height: 1.625;
+}
+
+.dashboard-header {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 0.75em;
+}
