Create event now properly adds to user slice of state

--- a/app/assets/stylesheets/components/mainpage.scss
+++ b/app/assets/stylesheets/components/mainpage.scss
@@ -15,7 +15,7 @@
 }
 
 .jumbotron {
-  background: image-url('teatime.jpg') no-repeat center center;
+  background: url("https://s3.us-east-2.amazonaws.com/readtheleaves1-dev/images/teatime.jpg") no-repeat center center;
   height: 529px;
   width: 100%;
   z-index: -1;
