Style user update page

--- a/app/assets/stylesheets/base/main.scss
+++ b/app/assets/stylesheets/base/main.scss
@@ -1,10 +1,10 @@
 .update-button {
-  width: 307px;
+  display: inline-block;
   text-align: center;
   color: white;
   background-color: #EF6236;
   border: 2px solid #EF6236;
-  padding: 1em 0;
+  padding: 1em 0.5em;
   font-weight: 600;
   letter-spacing: 2px;
   font-size: 17px;
