--- a/app/assets/stylesheets/components/city_detail.scss
+++ b/app/assets/stylesheets/components/city_detail.scss
@@ -1,18 +1,28 @@
 .city-name-container {
   display: flex;
-  flex-direction: column;
-  text-align: center;
   justify-content: center;
-  color: white;
-  padding-top: 6.5em;
-  padding-bottom: 6.5em;
+  align-items: center;
+  height: 430px;
+}
+
+.city-image-filter {
+  width: 100%;
+  height: 430px;
+  background: rgba(247, 191, 77, 0.87);
+  position: absolute;
 }
 
 .city-image {
   width: 100%;
-  top: -400px;
-  position: absolute;
+  max-height: 1080px;
   z-index: -1;
+}
+
+.city-info-container {
+    text-align: center;
+    color: white;
+    position: absolute;
+    z-index: 2;
 }
 
 .city-title {
