--- a/app/assets/stylesheets/components/profile.scss
+++ b/app/assets/stylesheets/components/profile.scss
@@ -1,26 +1,85 @@
 .profile-body-container {
-  background-color: #FAF6E8;
+background-color: #FAF6E8;
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+
+.profile-container {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.profile-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 .profile {
-    font-weight: 400;
-    line-height: 1.625;
+  font-weight: 400;
+  line-height: 1.625;
 }
 
 .user-info {
-    text-align: center;
+  text-align: center;
 }
 
 img.profile-pic {
-    border: 1px solid transparent;
-    border-radius: 15px;
+  border: 1px solid transparent;
+  border-radius: 15px;
+}
+
+.profile-form-container {
+  background-color: #FAF6E8;
+  line-height: 1.625;
+  font-weight: 400;
+  font-size: 19px;
+}
+
+.profile-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.photo-input {
+  line-height: 0px !important;
+  width: 300px !important;
+  padding: 0 !important;
+  border: none !important;
+}
+
+h1.user-name {
+  text-align: center;
+}
+
+.form-data {
+  display: flex;
+  flex-direction: column;
+}
+
+.profile-photo-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+.form-element-dropdown {
+  text-align: center;
+}
+
+input.input-field {
+  line-height: 0px;
+  width: 300px;
+  padding: 0;
+  border: none;
+}
+
+select.form-city-choice {
+  color: white;
+  background: #58B14C;
+  background-color: #EF6236;
+  border: 2px solid #EF6236;
+  padding: 1em 0;
+  font-weight: 600;
+  letter-spacing: 2px;
+  font-size: 17px;
 }
