--- a/app/assets/stylesheets/components/event_item.scss
+++ b/app/assets/stylesheets/components/event_item.scss
@@ -121,13 +121,13 @@ a.city-button:hover {
   border: 1px solid #268a16;
   display: inline-block;
   cursor: pointer;
-  color: #306108;
+  color: white;
   font-family: Arial;
   font-size: 15px;
   font-weight: bold;
   padding: 6px 24px;
   text-decoration: none;
-  text-shadow: 0px 1px 0px #aade7c;
+  // text-shadow: 0px 1px 0px #aade7c;
   margin: 0 0.75em;
 }
 
