--- a/app/assets/stylesheets/base/reset.scss
+++ b/app/assets/stylesheets/base/reset.scss
@@ -15,6 +15,11 @@ h1, h2, h3, h4, p, strong, em, a {
   line-height: inherit;
 }
 
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
 ul {
   list-style: none;
 }
