--- a/app/assets/stylesheets/components/city_detail.scss
+++ b/app/assets/stylesheets/components/city_detail.scss
@@ -156,7 +156,9 @@
 
 .change-city-container {
   display: flex;
+  flex-direction: column;
   align-items: center;
+  line-height: 2;
 }
 
 .change-home {
@@ -168,7 +170,6 @@
 .change-small {
   color: #eda20b;
   font-size: 17px;
-  font-weight: 100;
   margin: 0;
 }
 
