--- a/app/assets/stylesheets/components/event_item.scss
+++ b/app/assets/stylesheets/components/event_item.scss
@@ -32,8 +32,8 @@ a.city-button:hover {
 }
 
 .event-item-container {
-  width: 280px;
-  height: 475px;
+  width: 15em;
+  height: 25em;
   border: 1px solid #5C5C5C;
   border-radius: 20px;
   display: flex;
@@ -49,6 +49,10 @@ a.city-button:hover {
   margin-right: 0.7em;
 }
 
+.event-host {
+  margin-bottom: 0.25em;
+}
+
 .host {
   text-align: center;
 }
@@ -61,9 +65,12 @@ a.city-button:hover {
 
 .date-time {
   margin-top: 1em;
+  display: flex;
   text-align: center;
-  height: 150px;
-  width: 140px;
+  flex-direction: column;
+  flex-wrap: wrap;
+  height: 7.5em;
+  width: 5.5em;
 }
 
 .event-location {
