--- a/app/assets/stylesheets/components/event_item.scss
+++ b/app/assets/stylesheets/components/event_item.scss
@@ -1,17 +1,16 @@
 a.city-button {
-  box-shadow: rgb(252, 226, 193) 0px 1px 0px 0px inset;
-  background: linear-gradient(rgb(255, 196, 119) 5%, rgb(250, 150, 27) 100%) rgb(255, 196, 119);
+  box-shadow: #fce2c1 0px 1px 0px 0px inset;
+  background: linear-gradient(#ffc477 5%, #fa961b 100%) #ffc477;
   border-radius: 6px;
-  border: 1px solid rgb(238, 180, 79);
+  border: 1px solid #eeb44f;
   display: inline-block;
   cursor: pointer;
-  color: rgb(255, 255, 255);
-  font-family: Arial;
+  color: white;
   font-size: 15px;
   font-weight: bold;
   padding: 6px 24px;
   text-decoration: none;
-  text-shadow: rgb(204, 159, 82) 0px 1px 0px;
+  text-shadow: #cc9f52 0px 1px 0px;
 }
 
 a.city-button:hover {
@@ -29,68 +28,69 @@ a.city-button:hover {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-}
-
-.event-item-container {
-  width: 15em;
-  height: 25em;
-  border: 1px solid #5C5C5C;
-  border-radius: 20px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin: 10px;
+  line-height: 1.625;
   font-weight: 400;
 }
 
-.event-item-head {
-  display: flex;
-  align-items: center;
-  margin-right: 0.7em;
+.event-item-container {
+  width: 15.25em;
+  height: 25.75em;
+  border: 1px solid #5C5C5C;
+  border-radius: 20px;
+  margin: 0.55em;
 }
 
-.event-host {
-  margin-bottom: 0.25em;
+
+.event-item-head {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: space-evenly;
+  line-height: 1.5;
+  margin: 0.5em 0 0.5em 0;
 }
 
 .host {
-  text-align: center;
+  line-height: 1.5;
 }
 
 .host-pic {
   width: 125px;
+  height: 125px;
   border: 1px solid transparent;
   border-radius: 15px;
 }
 
-.date-time {
-  margin-top: 1em;
-  display: flex;
+.host-name {
+  font-size: 17px;
+}
+
+.spots {
+  padding: 0.3em 0;
+}
+
+.attend-button {
+  padding: 0.9em;
   text-align: center;
-  flex-direction: column;
-  flex-wrap: wrap;
-  height: 7.5em;
-  width: 5.5em;
 }
 
 .event-location {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 300px;
-  height: 60px;
+  margin-top: 0.75em;
+  margin-bottom: 0.75em;
+  padding: 0 1.75em;
+  text-align: center;
 }
 
 .event-spots-container {
-  display: flex;
-  flex-direction: column;
   align-items: center;
-  height: 95px;
-  width: 300px;
-  line-height: 40px;
+  height: 5.25em;
+  flex-direction: column;
+  display: flex;
   border-top: 1px solid black;
-  justify-content: center;
+}
+
+.spots-left {
+  padding: 0.5em 0 0.5em 0;
 }
 
 .event-spots {
@@ -106,7 +106,7 @@ a.city-button:hover {
 .event-spots .spots-left {
   background: url("https://s3.us-east-2.amazonaws.com/readtheleaves1-dev/images/leaf-green.png") repeat-x;
   background-position: 0 100%;
-  float: left;
+  float: unset;
   height: 50px;
 }
 
@@ -126,15 +126,11 @@ a.city-button:hover {
   -webkit-border-radius: 6px;
   border-radius: 6px;
   border: 1px solid #268a16;
-  display: inline-block;
-  cursor: pointer;
   color: white;
-  font-family: Arial;
-  font-size: 15px;
+  font-size: 0.8em;
   font-weight: bold;
   padding: 6px 24px;
   text-decoration: none;
-  // text-shadow: 0px 1px 0px #aade7c;
   margin: 0 0.75em;
 }
 
@@ -170,14 +166,8 @@ a.host-link {
   -webkit-border-radius: 6px;
   border-radius: 20px;
   border: 1px solid #dcdcdc;
-  display: inline-block;
-  cursor: pointer;
-  color: black;
-  font-family: Arial;
-  font-size: 19px;
-  /* font-weight: bold; */
-  padding: 6px 10px;
-  text-decoration: none;
+  display: block;
+  padding: 0 7px;
   text-shadow: 0px 1px 0px #ffffff;
 }
 
