Fix dashboard event

--- a/app/assets/stylesheets/components/event_item.scss
+++ b/app/assets/stylesheets/components/event_item.scss
@@ -62,7 +62,7 @@ a.city-button:hover {
 }
 
 .host-name {
-  font-size: 17px;
+  font-size: 75%;
 }
 
 .spots {
@@ -77,7 +77,6 @@ a.city-button:hover {
 .event-location {
   margin-top: 0.75em;
   margin-bottom: 0.75em;
-  padding: 0 1.75em;
   text-align: center;
 }
 
