Refactor sign-in/sign-up page

--- a/app/assets/stylesheets/base/main.scss
+++ b/app/assets/stylesheets/base/main.scss
@@ -13,3 +13,27 @@
   margin-top: 30px;
   margin-bottom: 30px;
 }
+
+.action-button {
+  color: white;
+  background-color: #EF6236;
+  border: 2px solid #EF6236;
+  padding: 1em 0.5em;
+  font-weight: 600;
+  letter-spacing: 2px;
+  font-size: 17px;
+  border-radius: 10px;
+  margin: 1.75em 0;
+}
+
+.large {
+
+}
+
+.medium {
+
+}
+
+.small {
+  
+}
