--- a/app/assets/stylesheets/components/footer.scss
+++ b/app/assets/stylesheets/components/footer.scss
@@ -7,9 +7,6 @@
   font-family: Helvetica;
   font-weight: 400;
   letter-spacing: 0.5px;
-}
-
-.footer-wrapper {
   background-color: #F7BF4D;
 }
 
@@ -26,6 +23,6 @@
   width: 65%;
 }
 
-p.footer-p {
+.footer-p {
   margin-bottom: 0.825em;
 }
