--- a/app/assets/stylesheets/components/mainpage.scss
+++ b/app/assets/stylesheets/components/mainpage.scss
@@ -1,26 +1,114 @@
-.main-content {
-  width: 100%;
-  margin: 0 auto;
-  font-size: 19px;
-  font-weight: 600;
-  font-family: Helvetica;
-}
-
-.pitch-container{
-  background: rgba(247,191,77,0.87);
-  display: flex;
-  justify-content: center;
-  padding: 170px;
-  color: white;
-}
-
-.jumbotron {
-  background: url("https://s3.us-east-2.amazonaws.com/readtheleaves1-dev/images/teatime.jpg") no-repeat center center;
-  height: 529px;
-  width: 100%;
-  z-index: -1;
-  position: absolute;
-}
+// .jumbotron-filter{
+//   background: rgba(247,191,77,0.87);
+// }
+//
+// .jumbotron {
+//   background: url("https://s3.us-east-2.amazonaws.com/readtheleaves1-dev/images/teatime.jpg") no-repeat center center;
+//   background-size: auto;
+//   width: 100%;
+//   height: 28em;
+// }
+//
+// .about-container {
+//   background: #f3ecce;
+//   display: flex;
+//   justify-content: space-around;
+//   text-align: center;
+//   align-items: center;
+//   height: 11.75em;
+// }
+//
+// .about-part {
+//   width: 15em;
+//  }
+//
+// .mainpage-image {
+//   width: 16.5em;
+// }
+//
+// .pitch-box {
+//     text-align: center;
+//     padding: 25% 0;
+//     color: white;
+// }
+//
+// h1.pitch-text {
+// }
+//
+// .why {}
+//
+// h3.why-title {
+//   text-align: center;
+//   margin: 2.5em 0 2em 0;
+//   font-weight: 600;
+//   font-size: 1.125em;
+// }
+//
+// .why-explain {
+//   display: flex;
+//   align-items: center;
+//   justify-content: space-evenly;
+//   margin: 0 4em 0 4em;
+// }
+//
+// .lower-body-container {
+//   text-align: center;
+// }
+//
+// .about-headline {
+//   color: #EF6236;
+//   font-size: 1.5em;
+//   font-weight: 600;
+//   margin-bottom: 0.1em;
+// }
+//
+// .about-text {
+//   font-weight: 400;
+//   line-height: 1.625;
+// }
+//
+// .why-explain-right {
+//     width: 21em;
+//     margin-top: 1em;
+// }
+//
+// .why-explain-p {
+//     font-weight: 400;
+//     line-height: 1.625;
+//     font-size: 1em;
+// }
+//
+// .why-explain-header {
+//     color: #EF6236;
+//     font-size: 1.5em;
+//     font-weight: 600;
+//     margin-bottom: 0.65em;
+// }
+//
+// .why-explain-left {
+//     width: 21em;
+//     margin-top: 1em;
+// }
+//
+// .body-signup {
+//     background: #f3ecce;
+//     text-align: center;
+//     height: 11.75em;
+// }
+//
+// a.body-signup-button {
+//     text-align: center;
+//     color: white;
+//     background-color: rgb(239, 98, 54);
+//     font-weight: 400;
+//     letter-spacing: 2px;
+//     font-size: 0.825em;
+//     border-width: 2px;
+//     border-style: solid;
+//     border-color: rgb(239, 98, 54);
+//     padding: 1.15em;
+//     border-radius: 10px;
+// }
 
 .pitch-box {
   display: flex;
@@ -59,7 +147,6 @@
 }
 
 .about-container {
-  display: flex;
   justify-content: center;
   background: #F3ECCE;
   text-align: center;
@@ -72,10 +159,7 @@
   justify-content: center;
   width: 1160px;
 }
-.about-part {
-  margin-right: 31px;
-  width: 33%;
- }
+
 
 .about-headline {
   color: #EF6236;
