--- a/app/assets/stylesheets/components/mainpage.scss
+++ b/app/assets/stylesheets/components/mainpage.scss
@@ -1,291 +1,135 @@
-// .jumbotron-filter{
-//   background: rgba(247,191,77,0.87);
-// }
-//
-// .jumbotron {
-//   background: url("https://s3.us-east-2.amazonaws.com/readtheleaves1-dev/images/teatime.jpg") no-repeat center center;
-//   background-size: auto;
-//   width: 100%;
-//   height: 28em;
-// }
-//
-// .about-container {
-//   background: #f3ecce;
-//   display: flex;
-//   justify-content: space-around;
-//   text-align: center;
-//   align-items: center;
-//   height: 11.75em;
-// }
-//
-// .about-part {
-//   width: 15em;
-//  }
-//
-// .mainpage-image {
-//   width: 16.5em;
-// }
-//
-// .pitch-box {
-//     text-align: center;
-//     padding: 25% 0;
-//     color: white;
-// }
-//
-// h1.pitch-text {
-// }
-//
-// .why {}
-//
-// h3.why-title {
-//   text-align: center;
-//   margin: 2.5em 0 2em 0;
-//   font-weight: 600;
-//   font-size: 1.125em;
-// }
-//
-// .why-explain {
-//   display: flex;
-//   align-items: center;
-//   justify-content: space-evenly;
-//   margin: 0 4em 0 4em;
-// }
-//
-// .lower-body-container {
-//   text-align: center;
-// }
-//
-// .about-headline {
-//   color: #EF6236;
-//   font-size: 1.5em;
-//   font-weight: 600;
-//   margin-bottom: 0.1em;
-// }
-//
-// .about-text {
-//   font-weight: 400;
-//   line-height: 1.625;
-// }
-//
-// .why-explain-right {
-//     width: 21em;
-//     margin-top: 1em;
-// }
-//
-// .why-explain-p {
-//     font-weight: 400;
-//     line-height: 1.625;
-//     font-size: 1em;
-// }
-//
-// .why-explain-header {
-//     color: #EF6236;
-//     font-size: 1.5em;
-//     font-weight: 600;
-//     margin-bottom: 0.65em;
-// }
-//
-// .why-explain-left {
-//     width: 21em;
-//     margin-top: 1em;
-// }
-//
-// .body-signup {
-//     background: #f3ecce;
-//     text-align: center;
-//     height: 11.75em;
-// }
-//
-// a.body-signup-button {
-//     text-align: center;
-//     color: white;
-//     background-color: rgb(239, 98, 54);
-//     font-weight: 400;
-//     letter-spacing: 2px;
-//     font-size: 0.825em;
-//     border-width: 2px;
-//     border-style: solid;
-//     border-color: rgb(239, 98, 54);
-//     padding: 1.15em;
-//     border-radius: 10px;
-// }
+.jumbotron {
+  background: url("https://s3.us-east-2.amazonaws.com/readtheleaves1-dev/images/teatime.jpg") no-repeat center center;
+  background-size: auto;
+  width: 100%;
+  height: 28em;
+}
+
+.jumbotron-filter {
+  background: rgba(247, 191, 77, 0.87);
+  height: inherit;
+  position: absolute;
+  width: 100%;
+  z-index: 2;
+}
 
 .pitch-box {
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  font-family: Helvetica;
+  z-index: 2;
+  color: white;
+  position: absolute;
+  transform: translate(60%, -200%);
 }
 
 .pitch-text {
-  margin-bottom: 19px;
-  font-weight: 600;
-  width: 700px;
+  margin-bottom: 0.45em;
   font-size: 2.25em;
-  text-align: center;
 }
 
 .pitch-p {
-  margin-bottom: 40px;
+  margin-bottom: 1.9em;
   font-size: 1.125em;
   font-weight: 100;
 }
 
-.top-signup-button {
-  text-align: center;
-  width: 350px;
-  background-color: #EF6236;
-  border: 2px solid #EF6236;
-  font-weight: 400;
-  border-radius: 10px;
-  font-size: 18px;
-  padding: 1em 1.5em;
-  letter-spacing: 2px;
-  padding: 1em 1.5em;
-  border: 2px;
-}
-
 .about-container {
-  justify-content: center;
-  background: #F3ECCE;
-  text-align: center;
-  padding: 2.3em 1em;
-  margin-bottom: 3em;
-}
-
-.about-item-container {
+  background: #f3ecce;
   display: flex;
-  justify-content: center;
-  width: 1160px;
+  justify-content: space-around;
+  text-align: center;
+  align-items: center;
+  height: 11.75em;
 }
 
+.about-part {
+  width: 15em;
+}
 
 .about-headline {
   color: #EF6236;
-  margin-bottom: 9px;
-  font-size: 1.25em;
+  font-size: 1.5em;
   font-weight: 600;
+  margin-bottom: 0.1em;
 }
 
 .about-text {
-  color: black;
-  font-weight: 200;
-}
-
-.h2 {
-  color: #EF6236;
-  font-size: 1.5em;
-  font-weight: 600;
-}
-
-
-.upper-body-container {
-  max-width: 1020px;
-  margin: 0 auto;
-}
-
-.why {
-  display: flex;
-  flex-direction: column;
+  font-weight: 400;
+  line-height: 1.625;
 }
 
 .why-title {
   text-align: center;
-  margin-bottom: 1em;
+  margin: 2.5em 0 2em 0;
   font-weight: 600;
-  font-family: Helvetica;
   font-size: 1.125em;
 }
 
-.why-explain {
+.why-explain-item {
   display: flex;
   align-items: center;
-  margin: 36px;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  margin: 0 4em 3em 4em;
 }
 
-.mainpage-image {
-  width: 313px;
-}
-
-.why-explain-right {
-  width: 396.45px;
-  height: 210.625px;
-  margin-top: 30px;
-  padding-right: 6px;
-}
-
-.why-explain-left {
-  width: 396.45px;
-  height: 210.625px;
-  margin-top: 30px;
-  padding-right: 6px;
+.why-explain {
+  width: 21em;
+  margin-top: 1em;
 }
 
 .why-explain-header {
-  margin-bottom: 18px;
+  color: #EF6236;
+  font-size: 1.5em;
+  font-weight: 600;
+  margin-bottom: 0.65em;
 }
 
-.p {
-  color: black;
+.why-explain-p {
   font-weight: 400;
   line-height: 1.625;
-  font-size: 19px;
+  font-size: 1em;
 }
 
 .body-signup {
-  background: #F3ECCE;
-  width: 100%;
+  background: #f3ecce;
+  text-align: center;
+  height: 11.75em;
 }
 
-.body-sign-box {
-  display: flex;
-  justify-content: center;
-  padding: 2em;
-  flex-direction: column;
-  align-items: center;
-}
-
-.signup-h2 {
-  color: #5C5C5C;
+.signup-text {
+  color: rgb(92, 92, 92);
   font-size: 1.875em;
-  margin-bottom: 29px;
-  margin-top: 3px;
+  padding: 1.25em 0 1.25em;
 }
 
 .body-signup-button {
-  width: 540px;
+  display: inline-block;
+  width: 34.25em;
+  padding: 1.15em 0;
   text-align: center;
   color: white;
-  background-color: #EF6236;
-  border: 2px solid #EF6236;
-  padding: 1em 0;
+  background-color: rgb(239, 98, 54);
   font-weight: 400;
   letter-spacing: 2px;
-  font-size: 17px;
+  font-size: 0.825em;
+  border-width: 2px;
+  border-style: solid;
+  border-color: rgb(239, 98, 54);
   border-radius: 10px;
-  line-height: normal;
 }
 
 .lower-body-container {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
+  text-align: center;
 }
 
 .testimonials {
   display: flex;
   justify-content: center;
-      margin-top: 3.5em;
-  margin-bottom: 1.625em;
-}
-
-.quotes {
-  display: flex;
-  width: 984px;
+  margin-top: 3.5em;
   font-weight: 400;
-  justify-content: center;
+  margin-bottom: 1.625em;
 }
 
 .quote {
@@ -293,37 +137,33 @@
   border-right: 0.5em solid #fcebc7;
   border-left: 0.5em solid #fcebc7;
   text-align: left;
-  font-size: 17px;
-  width: 331.66px;
+  font-size: 1em;
+  width: 19.5em;
   color: #595959;
   line-height: 1.625;
 }
 
 .quote-bold {
-  color: rgb(239, 98, 54);
+  color: #ef6236;
   font-weight: 600;
 }
 
-.img2 {
-  margin-left: 40px;
-}
-
 .stranger-title {
-  text-align: center;
-  margin-top: 75px;
+  margin-top: 4em;
   margin-bottom: 1em;
-  font-size: 19px;
 }
 
 .stranger-story {
   display: flex;
   align-items: center;
-  margin-bottom: 94px;
+  justify-content: center;
+  margin-bottom: 5em;
 }
 
 .stranger-right {
   margin-left: 42px;
   width: 396px;
+  text-align: left;
   height: 450px;
   line-height: 1.625;
   font-weight: 400;
@@ -331,11 +171,13 @@
 
 .stranger-p {
   margin-bottom: 0.8125em;
-  font-size: 19px;
+}
+
+.mainpage-image {
+  width: 16.5em;
 }
 
 .img3 {
-  width: 354.5px;
-  height: 322.33px;
-  padding-bottom: 6em;
+  width: 17em;
+  padding-bottom: 7em;
 }
