--- a/app/assets/stylesheets/components/mainpage.scss
+++ b/app/assets/stylesheets/components/mainpage.scss
@@ -10,18 +10,13 @@
   height: inherit;
   position: absolute;
   width: 100%;
-  z-index: 2;
 }
 
 .pitch-box {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  z-index: 2;
+  position: relative;
   color: white;
-  position: absolute;
-  transform: translate(60%, -200%);
+  text-align: center;
+  padding: 8em;
 }
 
 .pitch-text {
